# spruce

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
data/: asset_ids.h  asset_manifest.json
data/buffers/: BoomBoxWithAxes_18.sbuf  BoomBoxWithAxes_19.sbuf  BoomBoxWithAxes_2.sbuf  BoomBoxWithAxes_23.sbuf  BoomBoxWithAxes_26.sbuf  BoomBoxWithAxes_28.sbuf  BoomBoxWithAxes_29.sbuf  BoomBoxWithAxes_3.sbuf  BoomBoxWithAxes_33.sbuf  BoomBoxWithAxes_36.sbuf  BoomBoxWithAxes_37.sbuf  BoomBoxWithAxes_41.sbuf  BoomBoxWithAxes_44.sbuf  BoomBoxWithAxes_45.sbuf  BoomBoxWithAxes_49.sbuf  BoomBoxWithAxes_7.sbuf  Box_2.sbuf  Box_3.sbuf  Box_4.sbuf  Duck_2.sbuf  Duck_3.sbuf  Duck_4.sbuf  Duck_5.sbuf  Duck_6.sbuf  Duck_8.sbuf  Duck_9.sbuf  Triangle_2.sbuf  Triangle_3.sbuf  Triangle_4.sbuf  WaterBottle_2.sbuf  WaterBottle_3.sbuf  WaterBottle_7.sbuf  default_input_black_1.sbuf  default_input_white_1.sbuf  default_model_2.sbuf  default_model_3.sbuf  default_model_4.sbuf  default_model_5.sbuf  default_model_6.sbuf  default_texture_1.sbuf  (+258 more)
data/materials/: BoomBoxWithAxes_34.smtl  BoomBoxWithAxes_42.smtl  BoomBoxWithAxes_8.smtl  Duck_6.smtl  Duck_7.smtl  WaterBottle_8.smtl  default_model_7.smtl  helmet_7.smtl  sponza_106.smtl  sponza_128.smtl  sponza_150.smtl  sponza_158.smtl  sponza_180.smtl  sponza_300.smtl  sponza_332.smtl  sponza_356.smtl  sponza_36.smtl  sponza_372.smtl  sponza_394.smtl  sponza_402.smtl  sponza_410.smtl  sponza_418.smtl  sponza_426.smtl  sponza_442.smtl  sponza_450.smtl  sponza_466.smtl  sponza_479.smtl  sponza_495.smtl  sponza_509.smtl  sponza_531.smtl  sponza_543.smtl  sponza_571.smtl  sponza_579.smtl  sponza_587.smtl  sponza_595.smtl  sponza_629.smtl  sponza_641.smtl  sponza_657.smtl  sponza_665.smtl  sponza_673.smtl  (+20 more)
data/meshes/: BoomBoxWithAxes_1.smsh  BoomBoxWithAxes_17.smsh  BoomBoxWithAxes_27.smsh  BoomBoxWithAxes_35.smsh  BoomBoxWithAxes_43.smsh  Box_1.smsh  Duck_1.smsh  Triangle_1.smsh  WaterBottle_1.smsh  default_model_1.smsh  helmet_1.smsh  sponza_1.smsh  sponza_113.smsh  sponza_121.smsh  sponza_135.smsh  sponza_143.smsh  sponza_15.smsh  sponza_151.smsh  sponza_165.smsh  sponza_173.smsh  sponza_181.smsh  sponza_189.smsh  sponza_197.smsh  sponza_205.smsh  sponza_213.smsh  sponza_221.smsh  sponza_229.smsh  sponza_237.smsh  sponza_245.smsh  sponza_253.smsh  sponza_261.smsh  sponza_269.smsh  sponza_277.smsh  sponza_285.smsh  sponza_29.smsh  sponza_293.smsh  sponza_301.smsh  sponza_309.smsh  sponza_317.smsh  sponza_325.smsh  (+74 more)
data/models/: BoomBoxWithAxes.smdl  Box.smdl  Duck.smdl  Triangle.smdl  WaterBottle.smdl  default_model.smdl  helmet.smdl  sponza.smdl
data/shaders/: blur.frag  blur.vert  common_bindings.glsl  common_constants.glsl  common_scene_types.glsl  common_shadow.glsl  common_util.glsl  copy.frag  copy.frag.glsl  copy.frag.spv  copy.vert  copy.vert.glsl  copy.vert.spv  copy_swapchain.frag  debug_cascades.frag  debug_clusters.frag  debug_clusters.vert  debug_mesh.frag  debug_mesh.vert  debug_normals.frag  debug_normals.vert  depth_pass.frag  depth_pass.vert  fxaa.frag  fxaa.vert  gtao.frag  gtao.vert  light_cull.comp  pbr_mesh.frag  pbr_mesh.vert  shadow_cascades.frag  shadow_cascades.vert  skybox.frag  skybox.vert  (+9 more)
src/: CMakeLists.txt  main.cpp
src/core/: Core.h  spruce_core.h
src/core/memory/: Handle.h  Pool.h  TempBuffer.h
src/core/util/: Container.cpp  Container.h  FunctionQueue.h  FunctionStack.h  Span.h
src/core/util/node/: EntityNode.cpp  EntityNode.h  IndexNode.cpp  IndexNode.h  MaskNode.cpp  MaskNode.h
src/debug/: SprLog.cpp  SprLog.h
src/ecs/: Component.cpp  Component.h  ComponentManager.cpp  ComponentManager.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Registry.cpp  Registry.h  SprECS.cpp  SprECS.h  System.h  SystemManager.cpp  SystemManager.h
src/interface/: InputHandler.cpp  InputHandler.h  InputManager.cpp  InputManager.h  KeyboardConfig.cpp  KeyboardConfig.h  KeyboardState.h  MouseConfig.cpp  MouseConfig.h  MouseState.h  SprWindow.cpp  SprWindow.h  Window.cpp  Window.h
src/render/: BatchManager.h  RenderCoordinator.cpp  RenderCoordinator.h  SceneManager.cpp  SceneManager.h  SprRenderer.cpp  SprRenderer.h
src/render/renderers/: BlurRenderer.h  DebugCascadesRenderer.h  DebugClustersRenderer.h  DebugMeshRenderer.h  DebugNormalsRenderer.h  DepthPrepassRenderer.h  FXAARenderer.h  GTAORenderer.h  LightCullCompute.h  LitMeshRenderer.h  SkyboxRenderer.h  SunShadowRenderer.h  TestRenderer.h  UnlitMeshRenderer.h  VolumetricLightRenderer.h
src/render/scene/: BatchManager.cpp  BatchManager.h  BatchNode.cpp  BatchNode.h  Draw.h  GfxAssetLoader.cpp  GfxAssetLoader.h  Material.h  Mesh.h  SceneData.h  SceneManager.cpp  SceneManager.h  SceneObjects.h
src/render/util/: BatchManager.cpp  BatchManager.h  BatchNode.cpp  BatchNode.h  SceneManager.cpp  SceneManager.h
src/render/vulkan/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DescriptorSetHandler.cpp  DescriptorSetHandler.h  FrameRenderer.cpp  FrameRenderer.h  GPUStreamer.cpp  GPUStreamer.h  ImGuiRenderer.h  RenderFrame.h  RenderPassRenderer.cpp  RenderPassRenderer.h  StagingBufferBatch.cpp  StagingBufferBatch.h  SwapChain.h  TextureTranscoder.cpp  TextureTranscoder.h  UploadHandler.cpp  UploadHandler.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDisplay.cpp  VulkanDisplay.h  VulkanRenderer.cpp  VulkanRenderer.h  gfx_vulkan_core.h  vulkan_core.h
src/render/vulkan/resource/: OffsetBuffer.h  ResourceFlags.h  ResourceTypes.h  VulkanResourceCache.h  VulkanResourceManager.cpp  VulkanResourceManager.h
src/resource/: AssetLoader.cpp  AssetLoader.h  ResourceCache.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  ResourceTypes.h  SprResourceManager.cpp  SprResourceManager.h
tests/: CMakeLists.txt  PoolHandleTest.cpp
tools/: CMakeLists.txt
tools/asset_create/: AssetCreator.cpp  AssetCreator.h  CMakeLists.txt  main.cpp
tools/gltf/: CMakeLists.txt  FileWriter.h  GLTFParser.cpp  GLTFParser.h  Resources.h  main.cpp
tools/register_assets/: AssetRegisterer.cpp  AssetRegisterer.h  CMakeLists.txt  main.cpp
(+113 files in other folders)
